objects/zqu__ZProductFeature__c.object
<CustomObject>
    <description>The relationship between ZProduct and ZFeature</description>
    <fields>
        <fullName>zqu__Catalog_Sync_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product link to catalog sync history</description>
        <inlineHelpText>Product link to catalog sync history</inlineHelpText>
        <label>Catalog Sync History</label>
        <referenceTo>zqu__Catalog_Sync_History__c</referenceTo>
        <relationshipLabel>ZProductFeatures</relationshipLabel>
        <relationshipName>ZProductFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for soft deletion</description>
        <inlineHelpText>Flag for soft deletion</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <formula>zqu__ZFeature__r.zqu__BillingEntity__r.zqu__EntityID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EntityID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Features</relationshipLabel>
        <relationshipName>ZProductFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__SyncMessage__c</fullName>
        <description>Message for the Catalog Sync</description>
        <label>Sync Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__SyncStatus__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Synced</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Syncing</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__ZFeature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>zqu__ZFeature__c</referenceTo>
        <relationshipLabel>ZProductFeatures</relationshipLabel>
        <relationshipName>ZProductFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZProductFeatureFullName__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZProduct</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>ZProductFeatures</relationshipLabel>
        <relationshipName>ZProductFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Feature</label>
    <nameField>
        <label>Product Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>